# 11111111111111111

./: .bazelrc  .bazelrc.remote  .editorconfig  .readthedocs.yaml  .skipped-tests  AUTHORS  KD  MODULE.bazel  README.md  Rakefile  WORKSPACE  package-lock.json  pnpm-lock.yaml
.github/workflows/: bazel.yml  build-selenium-manager.yml  ci-java.yml  ci-javascript.yml  ci-python.yml  ci-rbe.yml  ci-renovate-rbe.yml  ci-rust.yml  ci.yml  label-commenter.yml  lock.yml  mirror-selenium-releases.yml  pr-labeler.yml  should-workflow-run.yml  stale.yml
common/: repositories.bzl  selenium_manager.bzl
common/extensions/: BUILD.bazel
common/remote-build/: BUILD.bazel
dotnet/: .editorconfig  CHANGELOG  paket.dependencies  paket.nuget.bzl  selenium-dotnet-version.bzl
dotnet/docs/: docfx.json  toc.yml
dotnet/private/: generate_devtools.bzl
java/: CHANGELOG  maven_install.json  version.bzl
javascript/grid-ui/: BUILD.bazel  package.json
javascript/private/: fragment.bzl
javascript/selenium-webdriver/: BUILD.bazel  CHANGES.md  chrome.js  firefox.js  index.js  package.json
py/: BUILD.bazel  CHANGES  conftest.py  generate.py  generate_api_module_listing.py  pyproject.toml  requirements.txt  setup.py  tox.ini
py/docs/: .readthedocs.yaml  README.rst
rake_tasks/: bazel.rb
rb/: .rubocop.yml  CHANGES  selenium-webdriver.gemspec
rb/spec/integration/selenium/webdriver/edge/: BUILD.bazel
rb/spec/integration/selenium/webdriver/safari/: BUILD.bazel
rust/: BUILD.bazel  CHANGELOG.md  Cargo.toml
scripts/: pinned_browsers.py  update_cdp.py  update_py_dependencies.sh
(+5596 files in other folders)
