load("//rb/spec:tests.bzl", "rb_integration_test")

[
    rb_integration_test(
        name = file[:-8],
        srcs = [file],
        browsers = ["edge"],
    )
    for file in glob(
        ["*_spec.rb"],
        exclude = ["service_spec.rb"],
    )
]

rb_integration_test(
    name = "service",
    srcs = ["service_spec.rb"],
    browsers = ["edge"],
    tags = [
        "no-grid",
        "skip-rbe",  # RBE needs internet
    ],
)
